--- a/1bash.template
+++ b/1bash.template
@@ -597,7 +597,7 @@ EQUIHASH_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## ETHASH
 ETHASH_MINER="ETHMINER"
-ETHASH_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"       # Use "%2e" instead of "." and "%2f" instead of "/"
+ETHASH_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"       # Use "%2e" instead of "." and "%2F" instead of "/"
 
 ## GROESTL
 GROESTL_INTENSITY="0"
