--- a/1bash.template
+++ b/1bash.template
@@ -145,6 +145,7 @@ v0055="papampi;x21s algo, RITO Coin"
 v0056="papampi;NICE_MTP, Nice_Cuckatoo31 and Nice_Cuckaroo29"
 v0057="papampi;Lyra2REv3"
 v0058="papampi;Allowed fan difference"
+v0059="LuKePicci;x16rv2 algo"
 
 
 # Do not edit these lines
@@ -161,7 +162,7 @@ nvOC_1bash_last_compatible="0058"
 #               BITCORE CRYPTONIGHT CRYPTONIGHTHEAVY CRYPTONIGHTV7 CRYPTONIGHTV8 
 #               CUCKAROO29 CUCKATOO31 CUCKOOCYCLE DECRED ENERGI EQUIHASH ETHASH GRS 
 #               LBRY LYRA2V2 LYRA2RE3 LYRA2Z MYR_GR NEOSCRYPT PASCAL PHI1612 PHI2 SIA 
-#               SIB SKEIN SKUNK X13 X16R X21S X22I XEVAN ZHASH
+#               SIB SKEIN SKUNK X13 X16R X16RV2 X21S X22I XEVAN ZHASH
 
 # ALGO Mining with NiceHash (Auto converts to BTC)
 ######### NICE-ETHASH,NICE-EQUIHASH, NICE-LYRA2REV2, NICE-NEOSCRYPT, NICE-CRYPTONIGHT, NICE-X11GOST, NICE-SKUNKHASH
@@ -448,7 +449,7 @@ fi
 #        support it and a compatilbe miner in the next sections.
 #        See the example for NEWCOIN/NEWALGO at the end of this section.
 
-ALGOS="BITCORE CRYPTONIGHT CRYPTONIGHTHEAVY CRYPTONIGHTV7 CRYPTONIGHTV8 CRYPTONIGHTR CUCKAROO29 CUCKATOO31 CUCKOOCYCLE DECRED ENERGI EQUIHASH ETHASH GRS LBRY LYRA2V2 LYRA2RE3 LYRA2Z MYR_GR NEOSCRYPT PASCAL PHI1612 PHI2 SIA SIB SKEIN SKUNK X13 X16R X21S X22I XEVAN ZHASH"
+ALGOS="BITCORE CRYPTONIGHT CRYPTONIGHTHEAVY CRYPTONIGHTV7 CRYPTONIGHTV8 CRYPTONIGHTR CUCKAROO29 CUCKATOO31 CUCKOOCYCLE DECRED ENERGI EQUIHASH ETHASH GRS LBRY LYRA2V2 LYRA2RE3 LYRA2Z MYR_GR NEOSCRYPT PASCAL PHI1612 PHI2 SIA SIB SKEIN SKUNK X13 X16R X16RV2 X21S X22I XEVAN ZHASH"
 
 BITCORE_COINS="BTX"
 CRYPTONIGHT_COINS="KRB,NICE_CRYPTONIGHT"
@@ -480,7 +481,8 @@ SIB_COINS="SIB,NICE_X11GHOST"
 SKEIN_COINS="ZPOOL_SKEIN,MPH_SKEIN"
 SKUNK_COINS="SIGT,ZPOOL_SKUNK,ALTCOM,NICE_SKUNKHASH"
 X13_COINS="ONION"
-X16R_COINS="RVN,XMN,NICE_X16R"
+X16R_COINS="XMN,NICE_X16R"
+X16RV2_COINS="RVN"
 X21S_COINS="RITO"
 X22I_COINS="SUQA"
 XEVAN_COINS="BSD"
@@ -693,6 +695,11 @@ X13_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 X16R_INTENSITY="0"
 X16R_MINER="ZENEMYminer"
 X16R_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
+
+## X16RV2
+X16RV2_INTENSITY="0"
+X16RV2_MINER="T_Rex"
+X16RV2_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## X21S
 X21S_INTENSITY="0"
