--- a/1bash.template
+++ b/1bash.template
@@ -146,6 +146,7 @@ v0056="papampi;NICE_MTP, Nice_Cuckatoo31 and Nice_Cuckaroo29"
 v0057="papampi;Lyra2REv3"
 v0058="papampi;Allowed fan difference"
 v0059="LuKePicci;x16rv2 algo"
+v0060="papampi;beamhashii algo"
 
 
 # Do not edit these lines
@@ -449,8 +450,9 @@ fi
 #        support it and a compatilbe miner in the next sections.
 #        See the example for NEWCOIN/NEWALGO at the end of this section.
 
-ALGOS="BITCORE CRYPTONIGHT CRYPTONIGHTHEAVY CRYPTONIGHTV7 CRYPTONIGHTV8 CRYPTONIGHTR CUCKAROO29 CUCKATOO31 CUCKOOCYCLE DECRED ENERGI EQUIHASH ETHASH GRS LBRY LYRA2V2 LYRA2RE3 LYRA2Z MYR_GR NEOSCRYPT PASCAL PHI1612 PHI2 SIA SIB SKEIN SKUNK X13 X16R X16RV2 X21S X22I XEVAN ZHASH"
+ALGOS="BEAMHASHII BITCORE CRYPTONIGHT CRYPTONIGHTHEAVY CRYPTONIGHTV7 CRYPTONIGHTV8 CRYPTONIGHTR CUCKAROO29 CUCKATOO31 CUCKOOCYCLE DECRED ENERGI EQUIHASH ETHASH GRS LBRY LYRA2V2 LYRA2RE3 LYRA2Z MYR_GR NEOSCRYPT PASCAL PHI1612 PHI2 SIA SIB SKEIN SKUNK X13 X16R X16RV2 X21S X22I XEVAN ZHASH"
 
+BEAMHASHII_COINS="BEAM,NICE_BEAMV2"
 BITCORE_COINS="BTX"
 CRYPTONIGHT_COINS="KRB,NICE_CRYPTONIGHT"
 CRYPTONIGHTV7_COINS="ETN,NICE_CRYPTONIGHTV7"
@@ -541,6 +543,9 @@ MINER_PWD="x"                                    # Set the miner password. Defau
 #        Zhash:
 #          "BMINER", GMINER", "LOLMINER, "Z_EWBF" 
 
+# BEAMHASHII 
+BEAMHASHII_MINER="GMINER"
+BEAMHASHII_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## BITCORE, TIMETRAVEL10
 BITCORE_INTENSITY="0"
@@ -862,6 +867,14 @@ BCI_POOL="replace_with_your_BCI_POOL"
 BCI_PORT="replace_with_your_BCI_PORT"
 BCI_WORKER="$WORKERNAME"
 BCI_POOL_PROTOCOL="stratum+tcp"
+
+# Beam (BEAMV2)
+BEAMV2_ADDRESS="replace_with_your_address"
+BEAMV2_OPTS=""
+BEAMV2_POOL="replace_with_your_Beamv2_POOL"
+BEAMV2_PORT="replace_with_your_Beamv2_PORT"
+BEAMV2_WORKER="$WORKERNAME"
+BEAMV2_POOL_PROTOCOL="stratum+tcp"
 
 # Bitsend (BSD)
 BSD_ADDRESS="replace_with_your_address"
@@ -1435,13 +1448,21 @@ DUAL_COIN_POOL_PROTOCOL="blake2s"             #Dual Coin Supported algos: "blake
 
 ## Nicehash autoconverts to BTC: ensure you update NICE_ADDRESS
 
-#NICE_CUCKAROO29
-NICE_CUCKAROO29_ADDRESS="$NICE_ADDRESS"
-NICE_CUCKAROO29_POOL="grincuckaroo29.eu.nicehash.com"
-NICE_CUCKAROO29_PORT="3371"
-NICE_CUCKAROO29_WORKER="$WORKERNAME"
-NICE_CUCKAROO29_OPTS=""
-NICE_CUCKAROO29_POOL_PROTOCOL="stratum+tcp"  
+#NICE_BEAMV2
+NICE_BEAMV2_ADDRESS="$NICE_ADDRESS"
+NICE_BEAMV2_POOL="beamv2.eu.nicehash.com"
+NICE_BEAMV2_PORT="3378"
+NICE_BEAMV2_WORKER="$WORKERNAME"
+NICE_BEAMV2_OPTS="--algo beamhashii"                        # If use GMINER add "--algo beamhashii"
+NICE_BEAMV2_POOL_PROTOCOL="stratum+tcp"
+
+#NICE_CUCKAROOD29
+NICE_CUCKAROOD29_ADDRESS="$NICE_ADDRESS"
+NICE_CUCKAROOD29_POOL="grincuckarood29.eu.nicehash.com"
+NICE_CUCKAROOD29_PORT="3377"
+NICE_CUCKAROOD29_WORKER="$WORKERNAME"
+NICE_CUCKAROOD29_OPTS="--algo cuckarood29"                 # If use GMINER add "--algo cuckarood29"
+NICE_CUCKAROOD29_POOL_PROTOCOL="stratum+tcp" 
 
 #NICE_CUCKATOO31
 NICE_CUCKATOO31_ADDRESS="$NICE_ADDRESS"
