--- a/1bash.template
+++ b/1bash.template
@@ -452,7 +452,7 @@ fi
 
 ALGOS="BEAMHASHII BITCORE CRYPTONIGHT CRYPTONIGHTHEAVY CRYPTONIGHTV7 CRYPTONIGHTV8 CRYPTONIGHTR CUCKAROO29 CUCKATOO31 CUCKOOCYCLE DECRED ENERGI EQUIHASH ETHASH GRS LBRY LYRA2V2 LYRA2RE3 LYRA2Z MYR_GR NEOSCRYPT PASCAL PHI1612 PHI2 SIA SIB SKEIN SKUNK X13 X16R X16RV2 X21S X22I XEVAN ZHASH"
 
-BEAMHASHII_COINS="BEAM,NICE_BEAMV2"
+BEAMHASHII_COINS="BEAM,NICE_BEAMHASHII"
 BITCORE_COINS="BTX"
 CRYPTONIGHT_COINS="KRB,NICE_CRYPTONIGHT"
 CRYPTONIGHTV7_COINS="ETN,NICE_CRYPTONIGHTV7"
@@ -1448,13 +1448,13 @@ DUAL_COIN_POOL_PROTOCOL="blake2s"             #Dual Coin Supported algos: "blake
 
 ## Nicehash autoconverts to BTC: ensure you update NICE_ADDRESS
 
-#NICE_BEAMV2
-NICE_BEAMV2_ADDRESS="$NICE_ADDRESS"
-NICE_BEAMV2_POOL="beamv2.eu.nicehash.com"
-NICE_BEAMV2_PORT="3378"
-NICE_BEAMV2_WORKER="$WORKERNAME"
-NICE_BEAMV2_OPTS="--algo beamhashii"                        # If use GMINER add "--algo beamhashii"
-NICE_BEAMV2_POOL_PROTOCOL="stratum+tcp"
+#NICE_BEAMHASHII
+NICE_BEAMHASHII_ADDRESS="$NICE_ADDRESS"
+NICE_BEAMHASHII_POOL="beamv2.eu.nicehash.com"
+NICE_BEAMHASHII_PORT="3378"
+NICE_BEAMHASHII_WORKER="$WORKERNAME"
+NICE_BEAMHASHII_OPTS="--algo beamhashii"                        # If use GMINER add "--algo beamhashii"
+NICE_BEAMHASHII_POOL_PROTOCOL="stratum+tcp"
 
 #NICE_CUCKAROOD29
 NICE_CUCKAROOD29_ADDRESS="$NICE_ADDRESS"
