--- a/1bash.template
+++ b/1bash.template
@@ -1567,13 +1567,13 @@ NICE_X11GOST_WORKER="$WORKERNAME"
 NICE_X11GOST_OPTS=""
 NICE_X11GOST_POOL_PROTOCOL="stratum+tcp"  
 
-# NICE_X16R
-NICE_X16R_ADDRESS="$NICE_ADDRESS"
-NICE_X16R_POOL="x16r.eu.nicehash.com"
-NICE_X16R_PORT="3366"
-NICE_X16R_WORKER="$WORKERNAME"
-NICE_X16R_OPTS=""
-NICE_X16R_POOL_PROTOCOL="stratum+tcp"  
+# NICE_X16RV2
+NICE_X16RV2_ADDRESS="$NICE_ADDRESS"
+NICE_X16RV2_POOL="x16rv2.eu.nicehash.com"
+NICE_X16RV2_PORT="3379"
+NICE_X16RV2_WORKER="$WORKERNAME"
+NICE_X16RV2_OPTS=""
+NICE_X16RV2_POOL_PROTOCOL="stratum+tcp"  
 
 # example, adding NICE_NEWALGO:
 #
